--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <title>Minha Loja Virtual</title>
 </head>
@@ -30,15 +30,16 @@
         <div class="card">
 
             <div class="lineInput">
-                <label for="Produto"></label>
+                <label for="Produto">Produto</label>
                 <input type="text" id="product" placeholder="Nome do produto">
             </div>
             <div class="lineInput">
-                <label for="valor"></label>
-                <input type="text" id="valor" placeholder="Valor do produto">
+                <label for="valor">Valor</label>
+                <input type="number" id="value" placeholder="Valor do produto">
             </div>
-            <button onclick="product.add_product()">Adicionar</button>
-            <button onclick="product.delet_product()">Remover</button>
+            
+            <button onclick="product.save_product()" id="btn_add">Adicionar</button>
+            <button onclick="product.cancel_product()" id="btn_remove">Remover</button>
         </div>
         
         <div class="content">
@@ -49,13 +50,7 @@
                     <th>Valor</th>
                     <th>Ações</th>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td class="center">1</td>
-                        <td>Mesa da sala de estar</td>
-                        <td>1900</td>
-                        <td><i class="bi bi-pencil"></i><i class="bi bi-trash"></i></td>
-                    </tr>
+                <tbody id="tbody">
                 </tbody>
             </table>
         </div>
