--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <input type="number" id="value" placeholder="Valor do produto">
             </div>
             
-            <button onclick="product.save_product()" id="btn_add">Adicionar</button>
-            <button onclick="product.cancel_product()" id="btn_remove">Remover</button>
+            <button id="btn_add">Adicionar</button>
+            <button id="btn_remove">Remover</button>
         </div>
         
         <div class="content">
